[package]
name = "pi_3d_loader"
version = "0.0.1"
authors = [""]
edition = "2021"
description = "gltf loader"
repository = "https://github.com/GaiaWorld/pi_gltfloader"
license = "MIT OR Apache-2.0"
keywords = ["gltf loader"]

[dependencies]
approx = "0.5"
wgpu = "0.13"

pi_atom = { version="0.2", features = ["serde"] }
pi_gltf = { path = "../pi_gltf" }
pi_hal = { path = "../pi_hal" }
serde_cbor = "0.11.2"