[package]
name = "pi_3d_loader"
version = "0.0.1"
authors = [""]
edition = "2021"
description = "gltf loader"
repository = "https://github.com/GaiaWorld/pi_gltfloader"
license = "MIT OR Apache-2.0"
keywords = ["gltf loader"]

[dependencies]
bytemuck = "1.12"
pi_atom = { version="0.2", features = ["serde"] }
serde_cbor = "0.11.2"
base64 = "0.20.0"
nalgebra = "0.32"
bevy                = { version="0.10", default-features = false, features=["bevy_winit"] }

pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_animation = { git = "https://github.com/GaiaWorld/pi_animation.git" }
pi_scene_math = { git = "https://github.com/GaiaWorld/pi_scene" }
pi_curves = { git = "https://github.com/GaiaWorld/pi_curves" }
pi_gltf = { git = "https://github.com/GaiaWorld/pi_gltf.git", features = ["extras"]}
pi_hal = { git = "https://github.com/GaiaWorld/pi_hal.git" }

pi_render = { git = "https://github.com/GaiaWorld/pi_render", branch = "master-shader"}


pi_scene_context = { path = "../pi_3d/crates/pi_scene_context" }
pi_mesh_builder = { path = "../pi_3d/crates/pi_mesh_builder" }
default_render = { path = "../pi_3d/crates/default_render" }
unlit_material = { path = "../pi_3d/crates/unlit_material" }
pi_engine_shell = { path = "../pi_3d/crates/pi_engine_shell" }
pi_node_materials = { path = "../pi_3d/crates/node_materials" }
particle = { path = "../pi_3d/crates/particle" }

[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../pi_render" }

[patch."https://github.com/GaiaWorld/pi_ecs"]
pi_ecs = { path = "../pi_ecs" }

[patch."https://github.com/GaiaWorld/pi_hal"]
pi_hal = { path = "../pi_hal" }

[patch."http://ser.yinengyun.com:10082/tech/winit.git"]
winit = { path = "../winit" }

[patch."https://github.com/GaiaWorld/pi_scene"]
pi_scene_math = { path = "../pi_scene/crates/pi_scene_math" }

[dev-dependencies]
pi_3d                   = { path = "../pi_3d" }
pi_async                = "0.5"
pi_bevy_render_plugin   = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_winit_window    = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_post_process    = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_ecs_extend      = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_asset           = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
log                 = "0.4"
env_logger          = "0.9"


[[example]]
name = "gltfskin"
path = "examples/gltf/simple_skin.rs"

[[example]]
name = "custom_extras"
path = "examples/gltf/custom_extras.rs"
